[project]
name = "pipecat-ai-lead-va"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pipecat-ai-cli>=0.1.6",
    "pipecat-ai-flows>=0.0.21",
    "pipecat-ai[cartesia,daily,deepgram,local-smart-turn-v3,openai,runner,silero,webrtc]>=0.0.92",
]
